Uprava formalit v pyccregu (make a REAME soubory). Vetev 1.1 je ponechana svemu osudu.
git-svn-id: file:///data/svn/enum/pyccReg/trunk@1453 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/clients/genzone/Makefile
+++ b/clients/genzone/Makefile
@@ -1,5 +1,6 @@
-IDL     = "../../cr/idl/ZoneGenerator.idl"
-DESTDIR = "/usr/local/ccRegUtils" 
+TOP_REPOS = ../../../..
+IDL       = ${TOP_REPOS}/idl/trunk/ZoneGenerator.idl
+DESTDIR   = /usr/local/ccRegUtils
  
 .PHONY: idl install clean 
  
@@ -13,6 +14,9 @@ install:
 	cp -f genzone_client.py ${DESTDIR} 
 	cp -f genzones.sh ${DESTDIR} 
  
+uninstall:
+	- rm -rf $(DESTDIR)
+
 clean: 
 	rm -fr ccReg 
 	rm -fr ccReg__POA 
