Vyforkovani devel vetve v pyccregu, oprava makefilu v trunku (relativni cesty)
git-svn-id: file:///data/svn/enum/pyccReg/trunk@1781 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/share/Makefile
+++ b/share/Makefile
@@ -1,6 +1,6 @@
-PREFIX       = /tmp/root
-TOP_REPOS    = ../../../..
-IDLDIR       = ${TOP_REPOS}/idl/tags/1.2.0
+PREFIX       =
+TOP_REPOS    = ../../..
+IDLDIR       = ${TOP_REPOS}/idl/trunk
 INSTALL      = ./install-sh
 GENZONE      = ZoneGenerator
 WHOIS        = Whois
