Propagace zmen z devel (revize 1781 az 2094)
git-svn-id: file:///data/svn/enum/pyfred/trunk@2096 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/server/pyfred_modules.conf
+++ b/server/pyfred_modules.conf
@@ -1,5 +1,8 @@
-# configuration file of python ccReg server
+# configuration file of pyfred server
 # names of modules which should be loaded in server during startup
 
 genzone
-#whois
+whois
+mailer
+filemanager
+techcheck
