Propagace zmen z devel (revize 2097 az 2190)
git-svn-id: file:///data/svn/enum/pyfred/trunk@2191 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/server/pyfred.conf
+++ b/server/pyfred.conf
@@ -1,10 +1,11 @@
 [General]
 ;dbhost=curlew
-dbhost=
-dbport=5432
-dbname=ccreg
+;dbname=ccregObject
 ;dbuser=ccreg
+dbhost=
+dbname=ccreg
 dbuser=ccreguser
+dbport=5432
 dbpassword=Eeh5ahSi
 nshost=localhost
 nsport=2809
@@ -12,13 +13,19 @@ loglevel=LOG_DEBUG
 logfacility=log_local1
 port=2225
 
+[Genzone]
+safeperiod=31
+expiration_hour=14
+idletreshold=60
+checkperiod=60
+
 [Mailer]
 testmode=on
 tester=jan.kryl@nic.cz
 sendmail=/usr/sbin/sendmail
 filemanager_object=FileManager
 idletreshold=60
-checkperiod=10
+checkperiod=60
 
 [FileManager]
 rootdir=/var/tmp/filemanager
