Zmergovani zmen z devel (revize 2191 az 2206) v ramci pripravy na dalsi releas.
git-svn-id: file:///data/svn/enum/pyfred/trunk@2208 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/server/pyfred.conf
+++ b/server/pyfred.conf
@@ -29,6 +29,8 @@ checkperiod=60
 
 [FileManager]
 rootdir=/var/tmp/filemanager
+idletreshold=60
+checkperiod=60
 
 [TechCheck]
 check_authoritative=On
