Pridelani ukladani historie k technickym kontrolam
git-svn-id: file:///data/svn/enum/pyfred/trunk@2211 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/server/pyfred.conf
+++ b/server/pyfred.conf
@@ -1,10 +1,10 @@
 [General]
-;dbhost=curlew
-;dbname=ccregObject
-;dbuser=ccreg
-dbhost=
-dbname=ccreg
-dbuser=ccreguser
+dbhost=curlew
+dbname=ccregObject
+dbuser=ccreg
+;dbhost=
+;dbname=ccreg
+;dbuser=ccreguser
 dbport=5432
 dbpassword=Eeh5ahSi
 nshost=localhost
