Synchronizace zdrojaku techchecku v trunku, devel, 1.3
git-svn-id: file:///data/svn/enum/pyfred/trunk@2313 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/server/pyfred.conf
+++ b/server/pyfred.conf
@@ -5,7 +5,7 @@ dbname=ccregObject
 dbuser=ccreg
 ;dbhost=
 ;dbname=ccreg
-;dbuser=ccreguser
+;dbuser=postgres
 dbport=5432
 dbpassword=Eeh5ahSi
 nshost=localhost
@@ -34,9 +34,4 @@ idletreshold=60
 checkperiod=60
 
 [TechCheck]
-check_authoritative=On
-check_autonomous=On
-check_existance=On
-check_heterogenous=On
-check_recursive=On
-check_recursive4all=On
+scriptdir=/var/tmp
