Pokus o merge devel z trunkem a branch 1.3, mozna bude nasledovat jeste oprava (revize 2336 az 2435).
git-svn-id: file:///data/svn/enum/pyfred/trunk@2437 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/server/pyfred.conf
+++ b/server/pyfred.conf
@@ -1,38 +1,88 @@
+#
+# basic configuration of pyfred
+#
 [General]
+# modules which should be loaded during startup
 modules=genzone whois mailer filemanager techcheck
-dbhost=curlew
-;dbname=ccregObject
+# hostname of database
+dbhost=
+# database user
 dbuser=ccreg
-;dbhost=
+# database name
 dbname=ccreg
-;dbuser=postgres
+# database port
 dbport=5432
+# database password
 dbpassword=Eeh5ahSi
+# hostname of corba nameservice
 nshost=localhost
+# port where nameservice listens
 nsport=2809
+# log level of message logged by pyfred
 loglevel=LOG_DEBUG
+# syslog facility for messages logged by pyfred
 logfacility=log_local1
+# port where pyfred listens for corba calls
 port=2225
 
+#
+# configuration of zone generator
+#
 [Genzone]
+# number of days the domain is expired but still generated to zone
 safeperiod=31
+# all domains which shouldn't be generated in zone starting with
+# current day, are inactivated after this hour - not before
 expiration_hour=14
+# Timeout in seconds after which the not used objects created by
+# genzone are released
 idletreshold=60
+# Period in seconds of awakening a cleaner process which releases
+# idle or closed objects created by genzone
 checkperiod=60
 
+#
+# configuration of mailer module
+#
 [Mailer]
+# enable for testing, all generated emails are then sent to tester's address
 testmode=on
+# tester's email address (use together with testmode)
 tester=jan.kryl@nic.cz
+# path to sendmail binary
 sendmail=/usr/sbin/sendmail
+# mailer module is dependent on filemanager servant. Set this to name
+# under which the filemanager object is accessible through corba nameservice
 filemanager_object=FileManager
+# Timeout in seconds after which the not used objects created by
+# mailer are released
 idletreshold=60
+# Period in seconds of awakening a cleaner process which releases
+# idle or closed objects created by mailer
 checkperiod=60
 
+#
+# configuration of a module which manages files
+#
 [FileManager]
+# directory under which are stored all managed files (must be absolute path)
 rootdir=/var/tmp/filemanager
+# Timeout in seconds after which the not used objects created by
+# filemanager are released
 idletreshold=60
+# Period in seconds of awakening a cleaner process which releases
+# idle or closed objects created by filemanager
 checkperiod=60
 
+#
+# configuration of module executing technical checks
+#
 [TechCheck]
+# directory under which are found test scripts
 scriptdir=./techchecks
+# expiration of poll messages in database is set according to this value.
+# Unit is days.
 msgLifetime=7
+# This must be enabled for test instances of pyfred. This prevents techcheck
+# module from doing any technical checks
+testmode=on
