K synchronizaci doslo az nyni - v predchozim synchronizacnim commitu jsem comitl jen novou branch ale zapomel jsem na trunk. Tim to commitem take opravuju shaduv commit, ktery mel prijit do tagu 1.4.0 a ne 1.3.0.
git-svn-id: file:///data/svn/enum/pyfred/trunk@2862 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/server/pyfred.conf
+++ b/server/pyfred.conf
@@ -5,11 +5,11 @@
 # modules which should be loaded during startup
 modules=genzone whois mailer filemanager techcheck
 # hostname of database
-dbhost=
+dbhost=curlew
 # database user
 dbuser=ccreg
 # database name
-dbname=ccreg
+dbname=ccregdbs01
 # database port
 dbport=5432
 # database password
@@ -60,6 +60,11 @@ idletreshold=60
 # Period in seconds of awakening a cleaner process which releases
 # idle or closed objects created by mailer
 checkperiod=60
+# Email signature's switch
+signing=off
+# Path to certificate and key (for signing of emails)
+#certfile=/home/loo/apache.org/chroot/conf/server.crt
+#keyfile=/home/loo/apache.org/chroot/conf/server.key
 
 #
 # configuration of a module which manages files
@@ -85,4 +90,18 @@ scriptdir=./techchecks
 msgLifetime=7
 # This must be enabled for test instances of pyfred. This prevents techcheck
 # module from doing any technical checks
-testmode=on
+testmode=off
+# Timeout in seconds after which the not used objects created by
+# techcheck are released
+idletreshold=60
+# Period in seconds of awakening a cleaner process which releases
+# idle or closed objects created by techcheck
+checkperiod=60
+# Period of executing scheduled technical checks (only one nsset is checked in
+# one period)
+queueperiod=5
+# How old must be technical check to be considered outdated (in days)
+oldperiod=30
+# If there was no candidate for regular check, this number of rounds
+# will not be issued SQL query looking for another candidate (load optimization)
+missrounds=10
