--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,12 @@
 [build_idl]
 # point to place whereever are placed centrally managed IDL files
-idldir = ../../idl/trunk
+idldir = /home/jara/enum/idl/trunk
 
 [install]
 # uncomment the line bellow and make sure /tmp/pyfred directory exists, if you
 # want to see what everything and where would be installed in your system
 # without actualy messing up your system.
 #prefix = /tmp/pyfred
+
+[bdist_rpm]
+install_script=rpm-install.sh
