oprava podminek rpm
git-svn-id: file:///data/svn/enum/pyfred/trunk@4726 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,5 +10,4 @@ idldir = /usr/share/idl/fred/
 
 [bdist_rpm]
 install_script=rpm-install.sh
-build_requires=fred-idl, libomniORB4.1-devel, libomniORBpy3-devel
-requires=libomniORBpy, python-clearsilver, postgresql-python, python-dns
+requires=libomniORBpy3, python-clearsilver, postgresql-python, python-dns
