--- a/setup.cfg
+++ b/setup.cfg
@@ -10,4 +10,6 @@ idldir = /usr/share/idl/fred/
 
 [bdist_rpm]
 install_script=rpm-install.sh
-requires=libomniORBpy3, python-clearsilver, postgresql-python, python-dns
+# there is a bug in libomniORBpy3 package that forbid importing omniORB modul
+# without using class from libomniORBpy3-devel (hence devel package dependancy)
+requires=libomniORBpy3-devel, omniORB-servers, omniORB-bootscripts, python-clearsilver, postgresql-python, python-dns
