Some changes in setup.py file - added new install options, - idl files now created during 'build' phase.
git-svn-id: file:///data/svn/enum/pyfred/trunk@5122 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
-[build_idl]
+[build]
 # point to place whereever are placed centrally managed IDL files
-idldir = /usr/share/idl/fred/
+idldir = /usr/local/share/idl/fred/
 
 [install]
 # uncomment the line bellow and make sure /tmp/pyfred directory exists, if you
