Changes in setup.py - idl files location depends on prefix. Sendmail location function modified. Destination of config file depends on prefix as well as paths in configuration file (for TechCheck scripts and FileManager file dir.)
git-svn-id: file:///data/svn/enum/pyfred/trunk@5156 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,15 @@
 [build]
 # point to place whereever are placed centrally managed IDL files
-idldir = /usr/local/share/idl/fred/
+#idldir = /usr/local/share/idl/fred/
+#by default has build no prefix param, but due to auto building idl files
+#this option is necessary
+#prefix=/usr/local/share/
 
 [install]
 # uncomment the line bellow and make sure /tmp/pyfred directory exists, if you
 # want to see what everything and where would be installed in your system
 # without actualy messing up your system.
-#prefix = /tmp/pyfred
+#prefix = /usr/local/share/
 
 [bdist_rpm]
 install_script=rpm-install.sh
