setup.py: idl files are create in install part. Custom build part discarted.
git-svn-id: file:///data/svn/enum/pyfred/trunk@5179 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/pyfred.conf
+++ b/pyfred.conf
@@ -10,7 +10,7 @@
 # basic configuration of pyfred
 #
 [General]
-modules=genzone  filemanager techcheck
+modules=genzone mailer filemanager techcheck
 dbuser=fred
 dbname=fred
 dbhost=localhost
@@ -34,7 +34,7 @@ nsport=2809
 [Mailer]
 testmode=on
 tester=
-sendmail=
+sendmail=/usr/sbin/sendmail
 filemanager_object=FileManager
 signing=off
 sendperiod=30
