--- a/pyfred.conf
+++ b/pyfred.conf
@@ -22,6 +22,7 @@ port=2225
 nscontext=fred
 nshost=localhost
 nsport=2809
+pidfile=/tmp/fredik/usr/var/run/pyfred.pid
 #
 # configuration of zone generator
 #
@@ -49,13 +50,13 @@ undeliveredperiod=0
 # configuration of a module which manages files
 #
 [FileManager]
-rootdir=/opt/fred/var/lib/pyfred/filemanager/
+rootdir=/tmp/fredik/usr/var/lib/pyfred/filemanager/
 
 #
 # configuration of module executing technical checks
 #
 [TechCheck]
-scriptdir=/opt/fred/libexec/
+scriptdir=/tmp/fredik/usr/libexecdir/pyfred
 msgLifetime=7
 queueperiod=5
 oldperiod=30
