Setup now allow to run sdist command (create source package) from `remote' directory (standart distutils allow invoke sdist only from . directory). Due to this added custom Sdist class with some (not big) differences compared to common one.
git-svn-id: file:///data/svn/enum/pyfred/trunk@5202 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
-include *.conf
+include INSTALL ChangeLog
 include tc_scripts/*
 include setup.cfg
 include rpm-install.sh
 
-include pyfred.conf.install
+include conf/pyfred.conf.install
+include conf/genzone.conf.install
