Functionality of bdist_rpm, sdist and clean  moved to freddist module. To freddist install class added former Install options for sysconfdir, libexecdir, localstatedir and preservepath.
git-svn-id: file:///data/svn/enum/pyfred/trunk@5245 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,7 @@
 include INSTALL ChangeLog
 include tc_scripts/*
+include freddist/*
+include freddist/command/*
 include setup.cfg
 include rpm-install.sh
 
