--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@
 #prefix = /usr/local/share/
 
 [bdist_rpm]
-install_script=rpm-install.sh
+#install_script=rpm-install.sh
 # there is a bug in libomniORBpy3 package that forbid importing omniORB modul
 # without using class from libomniORBpy3-devel (hence devel package dependancy)
 requires=libomniORBpy3-devel, omniORB-servers, omniORB-bootscripts, python-clearsilver, postgresql-python, python-dns
