Code cleanup. Some useless debug prints removed. Content of `unittest` directory added to files which sdist commpress into source tarball.
git-svn-id: file:///data/svn/enum/pyfred/trunk@5328 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,10 @@
 include INSTALL ChangeLog
-include tc_scripts/*
-include freddist/*
-include freddist/command/*
+include tc_scripts/*.py
+include freddist/*.py
+include freddist/command/*.py
 include setup.cfg
 
 include conf/pyfred.conf.install
 include conf/genzone.conf.install
+
+include unittests/*
