To `MANIFEST.in` file added some new files, so created source package or tarball now contain them.
git-svn-id: file:///data/svn/enum/pyfred/trunk@5384 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,18 @@
-include INSTALL ChangeLog
+include INSTALL
+include ChangeLog
+include setup.cfg
+include setup.py
+include README
+include MANIFEST.in
+
+include misc/*
+include misc/mailer_examples/*
 include tc_scripts/*.py
 include freddist/*.py
+include freddist/README
 include freddist/command/*.py
-include setup.cfg
 
-include conf/pyfred.conf.install
-include conf/genzone.conf.install
+
+include conf/*.install
 
 include unittests/*
