--- a/setup.cfg.template
+++ b/setup.cfg.template
@@ -1,2 +1,3 @@
 [bdist_rpm]
 requires=libomniORBpy3-devel, omniORB-servers, omniORB-bootscripts, python-clearsilver, postgresql-python, python-dns
+install-extra-opts=--prefix=/usr/local --sysconfdir=/etc --localstatedir=/var
