--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include INSTALL
 include ChangeLog
 include setup.cfg
+include setup.cfg.template
 include setup.py
 include README
 include MANIFEST.in
