--- a/setup.cfg.template
+++ b/setup.cfg.template
@@ -1,3 +1,3 @@
 [bdist_rpm]
-requires=libomniORBpy3-devel, omniORB-servers, omniORB-bootscripts, python-clearsilver, postgresql-python, python-dns, ldns
-install-extra-opts=--prefix=/usr --sysconfdir=/etc --localstatedir=/var
+requires=omniORBpy-devel, omniORB-servers, omniORB-bootscripts, python-clearsilver, postgresql-python, python-dns, ldns
+install-extra-opts=--prefix=/usr --sysconfdir=/etc --localstatedir=/var --include-scripts
