--- a/setup.cfg.template
+++ b/setup.cfg.template
@@ -1,3 +1,3 @@
 [bdist_rpm]
-requires=omniORBpy-devel, omniORB-servers, omniORB-bootscripts, python-clearsilver, postgresql-python, python-dns, ldns
+requires=python-omniORB, omniORB-servers, python-clearsilver, postgresql-python, python-dns, ldns
 install-extra-opts=--prefix=/usr --sysconfdir=/etc --localstatedir=/var --include-scripts
