--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ include setup.cfg
 include setup.cfg.template
 include setup.py
 include README
+include RELEASE-VERSION
 include MANIFEST.in
 
 include misc/*
