Ticket #8783 - Use only one file per query and respose in tests.

--- a/pyfred/unittests/dbdata/e9546702ab0da977572e90d253cd3ba2.yaml
+++ b/pyfred/unittests/dbdata/e9546702ab0da977572e90d253cd3ba2.yaml
@@ -7,3 +7,5 @@ query: |-
                   type = %(type_id)d
                   AND object_registry.name = %(handle)s
                   AND object_registry.erdate IS NULL
+response:
+- [33]
