Ticket #8783 - Move TestCase class definition into separate file; add getDomainList test.

--- a/pyfred/unittests/dbdata/cafb76ed363cfad3ee73b620f7026b55.yaml
+++ b/pyfred/unittests/dbdata/cafb76ed363cfad3ee73b620f7026b55.yaml
@@ -1,4 +1,4 @@
-params: {handle: NSSET, type_id: 2}
+params: {handle: foo.cz, type_id: 3}
 query: |-
   SELECT
                   object_registry.id
