--- a/pyfred/unittests/domainbrowser/refdata/nsset_list_en_0.yaml
+++ b/pyfred/unittests/domainbrowser/refdata/nsset_list_en_0.yaml
@@ -1,25 +1,13 @@
 exceeded: false
 table:
-- ['31', 'NSSET:102', '2', REG-FRED_A, Company A l.t.d, '20', Has relation to other
-    records in registry]
-- ['128', NSSET-1, '0', REG-FRED_A, Company A l.t.d, '30', Update prohibited|Sponsoring
-    registrar change prohibited]
-- ['125', NSID103, '2', REG-FRED_A, Company A l.t.d, '30', Has relation to other records
-    in registry|Update prohibited|Sponsoring registrar change prohibited]
-- ['142', NSSID01, '120', REG-FRED_A, Company A l.t.d, '30', Has relation to other
-    records in registry|Update prohibited|Sponsoring registrar change prohibited]
-- ['143', NSSID02, '499', REG-FRED_A, Company A l.t.d, '20', Has relation to other
-    records in registry]
-- ['144', NSSID03, '501', REG-FRED_A, Company A l.t.d, '20', Has relation to other
-    records in registry]
-- ['145', NSSID04, '0', REG-FRED_A, Company A l.t.d, '64', '']
-- ['146', NSSID05, '0', REG-FRED_A, Company A l.t.d, '64', '']
-- ['147', NSSID06, '0', REG-FRED_A, Company A l.t.d, '64', '']
-- ['148', NSSID07, '0', REG-FRED_A, Company A l.t.d, '64', '']
-- ['149', NSSID08, '0', REG-FRED_A, Company A l.t.d, '64', '']
-- ['151', NSSID10, '0', REG-FRED_A, Company A l.t.d, '64', '']
-- ['150', NSSID09, '0', REG-FRED_B, Company B l.t.d., '64', '']
-- ['1313', NSSID11, '1', REG-FRED_A, Company A l.t.d, '20', Has relation to other
-    records in registry]
-- ['1324', NSFOO1, '0', REG-FRED_A, Company A l.t.d, '30', Update prohibited|Sponsoring
-    registrar change prohibited]
+- ['8', NSSID01, '31', REG-FRED_A, Company A l.t.d, '20', Has relation to other records
+    in the registry]
+- ['9', NSSID02, '0', REG-FRED_A, Company A l.t.d, '64', '']
+- ['10', NSSID03, '0', REG-FRED_A, Company A l.t.d, '64', '']
+- ['11', NSSID04, '0', REG-FRED_A, Company A l.t.d, '64', '']
+- ['12', NSSID05, '0', REG-FRED_A, Company A l.t.d, '64', '']
+- ['13', NSSID06, '0', REG-FRED_A, Company A l.t.d, '64', '']
+- ['14', NSSID07, '0', REG-FRED_A, Company A l.t.d, '64', '']
+- ['15', NSSID08, '0', REG-FRED_A, Company A l.t.d, '64', '']
+- ['16', NSSID09, '0', REG-FRED_A, Company A l.t.d, '64', '']
+- ['17', NSSID10, '0', REG-FRED_A, Company A l.t.d, '64', '']
