--- a/pyfred/unittests/domainbrowser/refdata/public_status_desc_en.yaml
+++ b/pyfred/unittests/domainbrowser/refdata/public_status_desc_en.yaml
@@ -1,6 +1,6 @@
 [Contact is conditionally identified, Contact is identified, Contact is validated,
-  Delete prohibited, Domain blocked, Domain is administratively kept in zone, Domain
-    is administratively kept out of zone, Domain is not generated into zone, Domain
-    not validated, Expired, Has relation to other records in registry, MojeID contact,
-  Registrant change prohibited, Registration renewal prohibited, Sponsoring registrar
-    change prohibited, To be deleted, Update prohibited]
+  Deletion unauthorised, Domain blocked, Domain expired, Domain not validated, Has
+    relation to other records in the registry, MojeID contact, Registrant change unauthorised,
+  Registration renewal unauthorised, Sponsoring registrar change unauthorised, The
+    domain is administratively kept in zone, The domain is administratively kept out
+    of zone, The domain isn't generated in the zone, To be deleted, Update unauthorised]
